--- a/app/src/main/res/values-is-rIS/strings.xml
+++ b/app/src/main/res/values-is-rIS/strings.xml
@@ -726,10 +726,10 @@
     <string name="display_name">Birtingarnafn</string>
     <string name="edit_display_name">Breyta birtingarnafni</string>
     <string name="signature">Undirskrift</string>
-    <string name="mobile_signature">Farsímaundirskrift</string>
-    <string name="edit_mobile_signature">Virkja farsímaundirskrift</string>
+    <string name="mobile_footer">Farsímaundirskrift</string>
+    <string name="edit_mobile_footer">Virkja farsímaundirskrift</string>
     <string name="default_mobile_signature">Sent úr ProtonMail-farsíma</string>
-    <string name="mobile_signature_is_premium">Einungis notendur með greidda áskrift geta breytt farsímaundirskrift</string>
+    <string name="mobile_footer_is_premium">Einungis notendur með greidda áskrift geta breytt farsímaundirskrift</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Fresta</string>
     <string name="notifications_snooze">Frestun tilkynninga</string>
