--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -728,10 +728,10 @@
     <string name="display_name">Mostrar el nom</string>
     <string name="edit_display_name">Modificar el nom per mostrar</string>
     <string name="signature">Signatura</string>
-    <string name="mobile_signature">Signatura mòbil</string>
-    <string name="edit_mobile_signature">Habilitar signatura mòbil</string>
+    <string name="mobile_footer">Signatura mòbil</string>
+    <string name="edit_mobile_footer">Habilitar signatura mòbil</string>
     <string name="default_mobile_signature">Enviat des de ProtonMail mòbil</string>
-    <string name="mobile_signature_is_premium">El canvi de la signatura mòbil només es permet als usuaris de pagament</string>
+    <string name="mobile_footer_is_premium">El canvi de la signatura mòbil només es permet als usuaris de pagament</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Posposa</string>
     <string name="notifications_snooze">Posposar notificacions</string>
