--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -720,10 +720,10 @@ zu: &lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt; Möchten S
     <string name="display_name">Name anzeigen</string>
     <string name="edit_display_name">Anzeigename ändern</string>
     <string name="signature">Signatur</string>
-    <string name="mobile_signature">Signatur auf Mobilgeräten</string>
-    <string name="edit_mobile_signature">Signatur auf Mobilgerät aktivieren</string>
+    <string name="mobile_footer">Signatur auf Mobilgeräten</string>
+    <string name="edit_mobile_footer">Signatur auf Mobilgerät aktivieren</string>
     <string name="default_mobile_signature">Gesendet von ProtonMail mobile</string>
-    <string name="mobile_signature_is_premium">Das Ändern der mobilen Signatur ist nur in der kostenpflichtigen Version möglich</string>
+    <string name="mobile_footer_is_premium">Das Ändern der mobilen Signatur ist nur in der kostenpflichtigen Version möglich</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Zurückstellen</string>
     <string name="notifications_snooze">Benachrichtigungen später lesen</string>
