--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -741,10 +741,10 @@
     <string name="display_name">Zaslonski naziv</string>
     <string name="edit_display_name">Uredi zaslonski naziv</string>
     <string name="signature">Potpis</string>
-    <string name="mobile_signature">Potpis na mobilnim uređajima</string>
-    <string name="edit_mobile_signature">Omogući potpis na mobilnim uređajima</string>
+    <string name="mobile_footer">Potpis na mobilnim uređajima</string>
+    <string name="edit_mobile_footer">Omogući potpis na mobilnim uređajima</string>
     <string name="default_mobile_signature">Poslano sa ProtonMaila</string>
-    <string name="mobile_signature_is_premium">Promjena potpisa za mobilne uređaje je dopuštena samo plaćenim korisnicima</string>
+    <string name="mobile_footer_is_premium">Promjena potpisa za mobilne uređaje je dopuštena samo plaćenim korisnicima</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Utišaj</string>
     <string name="notifications_snooze">Utišavanje obavijesti</string>
