--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -718,10 +718,10 @@ ke:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;Apakah Anda 
     <string name="display_name">Nama tampilan</string>
     <string name="edit_display_name">Edit nama tampilan</string>
     <string name="signature">Tanda tangan</string>
-    <string name="mobile_signature">Tanda tangan mobile</string>
-    <string name="edit_mobile_signature">Aktifkan tanda tangan seluler</string>
+    <string name="mobile_footer">Tanda tangan mobile</string>
+    <string name="edit_mobile_footer">Aktifkan tanda tangan seluler</string>
     <string name="default_mobile_signature">Dikirim dari ProtonMail seluler</string>
-    <string name="mobile_signature_is_premium">Mengubah Tanda Tangan Seluler hanya diizinkan hanya untuk pengguna berbayar</string>
+    <string name="mobile_footer_is_premium">Mengubah Tanda Tangan Seluler hanya diizinkan hanya untuk pengguna berbayar</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Tunda</string>
     <string name="notifications_snooze">Pemberitahuan Tunda</string>
