--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -728,10 +728,10 @@
     <string name="display_name">Display name</string>
     <string name="edit_display_name">Ẓreg isem n uskan</string>
     <string name="signature">Azmul</string>
-    <string name="mobile_signature">Mobile signature</string>
-    <string name="edit_mobile_signature">Enable mobile signature</string>
+    <string name="mobile_footer">Mobile signature</string>
+    <string name="edit_mobile_footer">Enable mobile signature</string>
     <string name="default_mobile_signature">Ittwazen sγur`ProtonMail Aziraz</string>
-    <string name="mobile_signature_is_premium">Changing the Mobile Signature is allowed to Paid users only</string>
+    <string name="mobile_footer_is_premium">Changing the Mobile Signature is allowed to Paid users only</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Snooze</string>
     <string name="notifications_snooze">Ilɣa n usmekti</string>
