--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -740,10 +740,10 @@
     <string name="display_name">Afișare nume</string>
     <string name="edit_display_name">Editare nume afișat</string>
     <string name="signature">Semnătura</string>
-    <string name="mobile_signature">Semnătură mobil</string>
-    <string name="edit_mobile_signature">Activare semnătură mobil</string>
+    <string name="mobile_footer">Semnătură mobil</string>
+    <string name="edit_mobile_footer">Activare semnătură mobil</string>
     <string name="default_mobile_signature">Trimis cu ProtonMail pentru mobil</string>
-    <string name="mobile_signature_is_premium">Modificarea semnăturii pentru mobil este permisă doar celor cu un cont plătit</string>
+    <string name="mobile_footer_is_premium">Modificarea semnăturii pentru mobil este permisă doar celor cu un cont plătit</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Amânare</string>
     <string name="notifications_snooze">Notificări amânate</string>
