--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -754,10 +754,10 @@
     <string name="display_name">Отображаемое имя</string>
     <string name="edit_display_name">Изменить отображаемое имя</string>
     <string name="signature">Подпись</string>
-    <string name="mobile_signature">Подпись для мобильного клиента</string>
-    <string name="edit_mobile_signature">Добавлять мобильную подпись</string>
+    <string name="mobile_footer">Подпись для мобильного клиента</string>
+    <string name="edit_mobile_footer">Добавлять мобильную подпись</string>
     <string name="default_mobile_signature">Отправлено из мобильного клиента ProtonMail</string>
-    <string name="mobile_signature_is_premium">Изменение мобильной подписи разрешено только пользователям на платных тарифах</string>
+    <string name="mobile_footer_is_premium">Изменение мобильной подписи разрешено только пользователям на платных тарифах</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Приглушение</string>
     <string name="notifications_snooze">Приглушение уведомлений</string>
