--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -754,10 +754,10 @@
     <string name="display_name">Ім\'я для показу</string>
     <string name="edit_display_name">Редагувати показуване ім\'я</string>
     <string name="signature">Підпис</string>
-    <string name="mobile_signature">Мобільні підпис</string>
-    <string name="edit_mobile_signature">Додавати мобільний підпис</string>
+    <string name="mobile_footer">Мобільні підпис</string>
+    <string name="edit_mobile_footer">Додавати мобільний підпис</string>
     <string name="default_mobile_signature">Надіслано з ProtonMail mobile</string>
-    <string name="mobile_signature_is_premium">Змінення мобільного підпису дозволено лише передплаченим користувачам</string>
+    <string name="mobile_footer_is_premium">Змінення мобільного підпису дозволено лише передплаченим користувачам</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Відкласти</string>
     <string name="notifications_snooze">Затримка сповіщень</string>
