--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -713,10 +713,10 @@
     <string name="display_name">顯示名稱</string>
     <string name="edit_display_name">編輯顯示名稱</string>
     <string name="signature">簽名</string>
-    <string name="mobile_signature">行動裝置簽名檔</string>
-    <string name="edit_mobile_signature">啟用行動裝置簽名檔</string>
+    <string name="mobile_footer">行動裝置簽名檔</string>
+    <string name="edit_mobile_footer">啟用行動裝置簽名檔</string>
     <string name="default_mobile_signature">從 ProtonMail 手機版送出</string>
-    <string name="mobile_signature_is_premium">只有付費使用者可變更行動版簽名</string>
+    <string name="mobile_footer_is_premium">只有付費使用者可變更行動版簽名</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">延遲</string>
     <string name="notifications_snooze">通知延遲</string>
