--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -848,10 +848,10 @@
     <string name="display_name">Display name</string>
     <string name="edit_display_name">Edit display name</string>
     <string name="signature">Signature</string>
-    <string name="mobile_signature">Mobile signature</string>
-    <string name="edit_mobile_signature">Enable mobile signature</string>
+    <string name="mobile_footer">Mobile footer</string>
+    <string name="edit_mobile_footer">Enable mobile footer</string>
     <string name="default_mobile_signature">Sent from ProtonMail mobile</string>
-    <string name="mobile_signature_is_premium">Changing the Mobile Signature is allowed to Paid users only</string>
+    <string name="mobile_footer_is_premium">Changing the Mobile Footer is allowed to Paid users only</string>
 
     <!-- region Snooze Settings -->
     <string name="snooze_header">Snooze</string>
