Change menu entry from Swiping gesture to Swipe actions Fix toolbar title for SwipeSettingFragment Fix signature not being saved from remote issue

--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -794,7 +794,7 @@
     <string name="labels">Etiquetes</string>
     <string name="labels_manage">Administrador de etiquetes</string>
     <string name="folders_manage">Administrar carpetes</string>
-    <string name="swiping_gesture">Gest de lliscament</string>
+    <string name="swipe_actions">Gest de lliscament</string>
     <string name="swipe_action_right">Llisca a dreta</string>
     <string name="swipe_action_left">Llisca a l\'esquerra</string>
     <!-- region Swipe Actions -->
