--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -795,7 +795,7 @@ Svájci székhellyel</string>
     <string name="labels">Labels</string>
     <string name="labels_manage">Címkék kezelése</string>
     <string name="folders_manage">Mappák kezelése</string>
-    <string name="swiping_gesture">Csúsztatási műveletek</string>
+    <string name="swipe_actions">Csúsztatási műveletek</string>
     <string name="swipe_action_right">Csúsztatás jobbra</string>
     <string name="swipe_action_left">Csúsztatás balra</string>
     <!-- region Swipe Actions -->
