--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -794,7 +794,7 @@
     <string name="labels">Labels</string>
     <string name="labels_manage">Gerenciador de marcadores</string>
     <string name="folders_manage">Gerenciador de pastas</string>
-    <string name="swiping_gesture">Gestos de deslizar</string>
+    <string name="swipe_actions">Gestos de deslizar</string>
     <string name="swipe_action_right">Deslize para direita</string>
     <string name="swipe_action_left">Deslize para esquerda</string>
     <!-- region Swipe Actions -->
