--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -919,7 +919,7 @@
     <string name="labels_manager">Labels manager</string>
     <string name="folders_manage">Folders manager</string>
 
-    <string name="swiping_gesture">Swiping gesture</string>
+    <string name="swipe_actions">Swipe actions</string>
     <string name="swipe_action_right">Swipe right</string>
     <string name="swipe_action_left">Swipe left</string>
 
