--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -730,7 +730,7 @@
     <string name="signature">Signatura</string>
     <string name="mobile_footer">Signatura mòbil</string>
     <string name="edit_mobile_footer">Habilitar signatura mòbil</string>
-    <string name="default_mobile_signature">Enviat des de ProtonMail mòbil</string>
+    <string name="default_mobile_footer">Enviat des de ProtonMail mòbil</string>
     <string name="mobile_footer_is_premium">El canvi de la signatura mòbil només es permet als usuaris de pagament</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Posposa</string>
