--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -756,7 +756,7 @@
     <string name="signature">Podpis</string>
     <string name="mobile_footer">Mobile signature</string>
     <string name="edit_mobile_footer">Enable mobile signature</string>
-    <string name="default_mobile_signature">Odesláno z mobilní verze ProtonMail</string>
+    <string name="default_mobile_footer">Odesláno z mobilní verze ProtonMail</string>
     <string name="mobile_footer_is_premium">Změna podpisu na mobilním zařízení je dostupná pouze pro platící uživatele</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Snooze</string>
