--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -731,7 +731,7 @@ compre más
     <string name="signature">Firma</string>
     <string name="mobile_footer">Firma móvil</string>
     <string name="edit_mobile_footer">Habilitar firma de móvil</string>
-    <string name="default_mobile_signature">Enviado desde ProtonMail móvil</string>
+    <string name="default_mobile_footer">Enviado desde ProtonMail móvil</string>
     <string name="mobile_footer_is_premium">Cambiar la firma móvil solo se permite a los usuarios de pago</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Silenciar</string>
