--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -731,7 +731,7 @@ Svájci székhellyel</string>
     <string name="signature">Aláírás</string>
     <string name="mobile_footer">Mobil aláírás</string>
     <string name="edit_mobile_footer">Mobil aláírás bekapcsolása</string>
-    <string name="default_mobile_signature">ProtonMail alkalmazásból küldve</string>
+    <string name="default_mobile_footer">ProtonMail alkalmazásból küldve</string>
     <string name="mobile_footer_is_premium">A mobil aláírást csak elfőzető felhasználók módosíthatják</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Szüneteltetés</string>
