--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -720,7 +720,7 @@ ke:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;Apakah Anda 
     <string name="signature">Tanda tangan</string>
     <string name="mobile_footer">Tanda tangan mobile</string>
     <string name="edit_mobile_footer">Aktifkan tanda tangan seluler</string>
-    <string name="default_mobile_signature">Dikirim dari ProtonMail seluler</string>
+    <string name="default_mobile_footer">Dikirim dari ProtonMail seluler</string>
     <string name="mobile_footer_is_premium">Mengubah Tanda Tangan Seluler hanya diizinkan hanya untuk pengguna berbayar</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Tunda</string>
