--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -730,7 +730,7 @@
     <string name="signature">Firma</string>
     <string name="mobile_footer">Firma mobile</string>
     <string name="edit_mobile_footer">Abilita firma mobile</string>
-    <string name="default_mobile_signature">Inviato da ProtonMail mobile</string>
+    <string name="default_mobile_footer">Inviato da ProtonMail mobile</string>
     <string name="mobile_footer_is_premium">La modifica della firma mobile è permessa solo agli utenti premium</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Posticipa</string>
