--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -730,7 +730,7 @@
     <string name="signature">Azmul</string>
     <string name="mobile_footer">Mobile signature</string>
     <string name="edit_mobile_footer">Enable mobile signature</string>
-    <string name="default_mobile_signature">Ittwazen sγur`ProtonMail Aziraz</string>
+    <string name="default_mobile_footer">Ittwazen sγur`ProtonMail Aziraz</string>
     <string name="mobile_footer_is_premium">Changing the Mobile Signature is allowed to Paid users only</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Snooze</string>
