--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -730,7 +730,7 @@
     <string name="signature">Assinatura</string>
     <string name="mobile_footer">Assinatura móvel</string>
     <string name="edit_mobile_footer">Ativar assinatura móvel</string>
-    <string name="default_mobile_signature">Enviado via ProtonMail móvel</string>
+    <string name="default_mobile_footer">Enviado via ProtonMail móvel</string>
     <string name="mobile_footer_is_premium">A alteração de assinatura móvel é permitido apenas para usuários pagos</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Soneca</string>
