--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -756,7 +756,7 @@
     <string name="signature">Подпись</string>
     <string name="mobile_footer">Подпись для мобильного клиента</string>
     <string name="edit_mobile_footer">Добавлять мобильную подпись</string>
-    <string name="default_mobile_signature">Отправлено из мобильного клиента ProtonMail</string>
+    <string name="default_mobile_footer">Отправлено из мобильного клиента ProtonMail</string>
     <string name="mobile_footer_is_premium">Изменение мобильной подписи разрешено только пользователям на платных тарифах</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Приглушение</string>
