--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -725,7 +725,7 @@
     <string name="signature">Signatur</string>
     <string name="mobile_footer">Mobilsignatur</string>
     <string name="edit_mobile_footer">Aktivera mobil signatur</string>
-    <string name="default_mobile_signature">Skickat från ProtonMail mobile</string>
+    <string name="default_mobile_footer">Skickat från ProtonMail mobile</string>
     <string name="mobile_footer_is_premium">Ändring av mobilsignatur är endast möjligt för betalande användare</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Snooza</string>
