--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -725,7 +725,7 @@
     <string name="signature">İmza</string>
     <string name="mobile_footer">Mobil imza</string>
     <string name="edit_mobile_footer">Mobil imzayı etkinleştir</string>
-    <string name="default_mobile_signature">ProtonMail mobil ile gönderildi</string>
+    <string name="default_mobile_footer">ProtonMail mobil ile gönderildi</string>
     <string name="mobile_footer_is_premium">Mobil imza, yalnızca ücretli kullanıcılar tarafından değiştirilebilir</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">Ertele</string>
