--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -715,7 +715,7 @@
     <string name="signature">簽名</string>
     <string name="mobile_footer">行動裝置簽名檔</string>
     <string name="edit_mobile_footer">啟用行動裝置簽名檔</string>
-    <string name="default_mobile_signature">從 ProtonMail 手機版送出</string>
+    <string name="default_mobile_footer">從 ProtonMail 手機版送出</string>
     <string name="mobile_footer_is_premium">只有付費使用者可變更行動版簽名</string>
     <!-- region Snooze Settings -->
     <string name="snooze_header">延遲</string>
