--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,11 @@
     <string name="settings_swipe_left_to_right">Left to right</string>
     <string name="settings_swipe_right_to_left">Right to left</string>
 
+    <!-- region Dialogs -->
+    <string name="dialog_discard_changes_title">Discard changes?</string>
+    <string name="dialog_discard_changes_message">Any unsaved changes will be discarded.</string>
+    <string name="discard">Discard</string>
+
     <!-- end region -->
 
     <!-- region Old / V3 / pre-conventions -->
@@ -850,8 +855,9 @@
     <string name="signature">Signature</string>
     <string name="mobile_footer">Mobile footer</string>
     <string name="edit_mobile_footer">Enable mobile footer</string>
-    <string name="default_mobile_signature">Sent from ProtonMail mobile</string>
+    <string name="default_mobile_footer">Sent from ProtonMail mobile</string>
     <string name="mobile_footer_is_premium">Changing the Mobile Footer is allowed to Paid users only</string>
+    <string name="mobile_footer_info">This footer is added after your signature</string>
 
     <!-- region Snooze Settings -->
     <string name="snooze_header">Snooze</string>
